manifests/vcluster-k8s-123/argocd-vs-vcluster-k8s-123.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-vcluster-k8s-123
  namespace: k8s
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingress/vcluster
  tls:
  - match:
    - port: 443
      sniHosts:
      - "argocd-vcluster-k8s-123"
      - "vmi758606.contaboserver.net"
    route:
    - destination:
        host: argocd-apps-argocd-vcluster-k8s-123-server-x-argocd--b8cf5903b5
        port:
          number: 8443
